--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: hsl(233, 47%, 7%);
   display: flex;
@@ -14,30 +13,8 @@ body {
   color: hsl(0, 0%, 100%);
 }
 
-main {
-  max-width: 400px;
-}
-
-span {
-  color: hsl(277, 64%, 61%);
-}
-
-h1 {
-  font-size: 1.7rem;
-}
-
-h2 {
-  font-size: 1.3rem;
-  margin-bottom: 0;
-}
-
-p {
-  color: hsla(0, 0%, 100%, 0.75);
-  font-size: 0.9rem;
-  line-height: 1.5;
-}
-
 .card-container {
+  max-width: 400px;
   background-color: hsl(244, 38%, 16%);
   display: flex;
   flex-direction: column;
@@ -47,32 +24,60 @@ p {
   box-sizing: border-box;
 }
 
-.desktop-image {
-  display: none;
-}
-
-.mobile-image {
-  max-width: 100%;
+.image {
+  background-color: hsl(277, 64%, 61%);
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  filter: opacity(0.7) drop-shadow(0 0 0 hsl(277, 64%, 61%))
-  saturate(4) contrast(115%) brightness(75%) grayscale(15%);
 }
 
-.heading {
+.card-image {
+  max-width: 100%;
+  mix-blend-mode: multiply;
+  display: block;
+}
+
+.heading-div {
   margin: 2.5rem 1.6rem;
+}
+
+.header {
+  font-size: 1.7rem;
+}
+
+.colored-word {
+  color: hsl(277, 64%, 61%);
+}
+
+.heading-text {
+  color: hsla(0, 0%, 100%, 0.75);
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 .statistics {
   margin-bottom: 2.5rem;
 }
 
+.stat-list {
+  list-style-type: none;
+  display: contents;
+}
+
+.stat-heading {
+  display: block;
+  font-size: 1.3rem;
+  color: hsl(0, 0%, 100%);
+  text-transform: none;
+  font-family: 'Inter', sans-serif;
+  line-height: 2;
+}
+
 .stat-text {
   text-transform: uppercase;
   color: hsla(0, 0%, 100%, 0.6);
   font-family: 'Lexend Deca', sans-serif;
-  letter-spacing: 0.1em;
-  margin-top: 0.4rem;
+  letter-spacing: 0.1rem;
+  margin-top: 2rem;
   font-size: 0.8rem;
 }
 
@@ -87,19 +92,9 @@ p {
 }
 
 @media (min-width: 900px) {
-  main {
-    min-width: 1000px;
-  }
-
-  h1 {
-    font-size: 2rem;
-  }
-
-  h2 {
-    font-size: 1.2rem;
-  }
 
   .card-container {
+    min-width: 1000px;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -110,25 +105,25 @@ p {
     justify-content: center;
   }
 
-  .desktop-image {
-    display: block;
-    max-width: 457px;
+  .image {
     border-bottom-right-radius: 15px;
-    border-top-right-radius: 15px;
-    filter: opacity(0.7) drop-shadow(0 0 0 hsl(277, 64%, 61%))
-    saturate(4) contrast(115%) brightness(75%) grayscale(15%);
+    border-top-left-radius: 0;
   }
 
-  .mobile-image {
-    display: none;
+  .card-image {
+    max-width: 457px;
   }
 
   .content {
     min-width: 500px;
   }
 
-  .heading {
+  .heading-div {
     margin: 3rem 7rem 3rem 3rem;
+  }
+
+  .header {
+    font-size: 2rem;
   }
 
   .statistics {
@@ -136,8 +131,14 @@ p {
     display: flex;
   }
 
-  .stat-text {
-    font-size: 0.7rem;
-    margin-right: 3.5rem;
+  .stat-heading {
+    font-size: 1.2rem;
   }
+
+  .stat-text {
+    font-size: 0.6rem;
+    margin-right: 3.5rem;
+    margin-top: 0.3rem;
+  }
+
 }
